# raytracing-weekend

./: .gitignore  CMakeLists.txt  CMakeLists.txt_bak  Makefile  color.h  main.cpp  render.sh  vec3.h
src/: main.cpp  ray.h  vec3.h
